feat: create section portfolio, create buttons and create video title

--- a/index.html
+++ b/index.html
@@ -65,7 +65,11 @@
             </section>
             <section class="section skills__section">
                <div class="title__name">
-                  <h2><span>Skills</span></h2>
+                  <h2>
+                     <span>
+                        Skills
+                     </span>
+                  </h2>
                </div>
                <div class="skills">
                   <div class="skills__discribe">
@@ -101,11 +105,38 @@
                
 
             </section>
+            <section class="section portfolio__section">
+               <div class="title__name">
+                  <h2><span>Portfolio</span></h2>
+               </div>
+               <div class="buttons">
+                  <button isTranslate="winter" class="just-button" data-season="winter">Winter</button>
+                  <button isTranslate="spring" class="just-button" data-season="spring">Spring</button>
+                  <button isTranslate="summer" class="just-button" data-season="summer">Summer</button>
+                  <button isTranslate="autumn" class="just-button" data-season="autumn">Autumn</button>
+               </div>
+               <div class="pictures">
+                  <img class="portfolio-image" src="./assets/Img/png/Autumn/kiss.png" alt="portfolio-image">
+                  <img class="portfolio-image" src="./assets/img/png/Autumn/horse.png" alt="portfolio-image">
+                  <img class="portfolio-image" src="./assets/img/png/Autumn/chaild.png" alt="portfolio-image">
+                  <img class="portfolio-image" src="./assets/img/png/Autumn/three.png" alt="portfolio-image">
+                  <img class="portfolio-image" src="./assets/img/png/Autumn/couple.png" alt="portfolio-image">
+                  <img class="portfolio-image" src="./assets/img/png/Autumn/phone.png" alt="portfolio-image">
+               </div>
+
+            </section>
 
 
 
-            <section></section>
-            <section></section>
+            <section class="section video__section">
+               <div class="title__name">
+                  <h2>
+                     <span>
+                        Video
+                     </span>
+                  </h2>
+               </div>
+            </section>
             <section></section>
       </div>
 
