feat: create and stylize video section

--- a/index.html
+++ b/index.html
@@ -136,6 +136,10 @@
                      </span>
                   </h2>
                </div>
+               <div class="video-player">
+                  <video src="#" poster="./assets/Img/svg/Play_hover.svg"></video>
+               </div>
+
             </section>
             <section></section>
       </div>
