feat: create and stylize not the end price section

--- a/index.html
+++ b/index.html
@@ -125,9 +125,6 @@
                </div>
 
             </section>
-
-
-
             <section class="section video__section">
                <div class="title__name">
                   <h2>
@@ -139,8 +136,45 @@
                <div class="video-player">
                   <video src="#" poster="./assets/Img/svg/Play_hover.svg"></video>
                </div>
-
             </section>
+            <section class="section price__section">
+               <div class="title__name">
+                  <h2>
+                     <span>
+                        Price
+                     </span>
+                  </h2>
+               </div>
+               <div class="section-price">
+                  <div isTranslate="title_standard" class="title-prise">
+                     Standard
+                  </div>
+                  <div class="prise">
+                     500 $
+                  </div>
+                  <ul class="prise-list">
+                     <li isTranslate="price-description-1-span-1" class="prise-inner-list">
+                        One location
+                     </li>
+                     <li isTranslate="price-description-1-span-2" class="prise-inner-list">
+                        120 photos in color
+                     </li>
+                     <li isTranslate="price-description-1-span-3" class="prise-inner-list">
+                        12 photos in retouch
+                     </li>
+                     <li isTranslate="price-description-1-span-4" class="prise-inner-list">
+                        Readiness 2-3 weeks
+                     </li>
+                     <li isTranslate="price-description-1-span-5" class="prise-inner-list">
+                        Make up, visage
+                     </li>
+                  </ul>
+                  <button isTranslate="order" class="golden-button order">
+                     Order shooting
+                  </button>
+               </div>
+            </section>
+
             <section></section>
       </div>
 
