fix: correct buttons name, correct header block, delete em,

--- a/index.html
+++ b/index.html
@@ -48,9 +48,9 @@
                            </li>
                         </ul>
                         <div class="switch-lng">
-                           <a id="en" class="switch-lng-link" href="#">en</a>
-                           <p class="slesh">/</p>
-                           <a id="ru" class="switch-lng-link" href="#">ru</a>
+                           <button id="en" class="switch-lng-link" href="#">en</button>
+                           <span>/</span>
+                           <button id="ru" class="switch-lng-link" href="#">ru</button>
                         </div>
                   </nav>         
                </div>
@@ -60,7 +60,7 @@
                   <p class="hero-text">
                      Save sincere emotions, romantic feelings and happy moments of life together with professional photographer Alexa Rise
                   </p>
-                  <button class="button golden-button">Hire me</button>
+                  <button class="golden-button">Hire me</button>
                </div>
             </section>
             <section class="section skills__section">
