feat:fix styles, create price block

--- a/index.html
+++ b/index.html
@@ -134,7 +134,7 @@
                   </h2>
                </div>
                <div class="video-player">
-                  <video src="#" poster="./assets/Img/svg/Play_hover.svg"></video>
+                  <video class="video" src="#" poster="./assets/Img/svg/Play_hover.svg"></video>
                </div>
             </section>
             <section class="section price__section">
@@ -145,34 +145,93 @@
                      </span>
                   </h2>
                </div>
-               <div class="section-price">
-                  <div isTranslate="title_standard" class="title-prise">
-                     Standard
+               <div class="price-container">
+                  <div class="section-price">
+                     <div isTranslate="title_standard" class="title-prise">
+                        Standard
+                     </div>
+                     <span class="prise">
+                        500 $
+                     </span>
+                     <ul class="prise-list">
+                        <li isTranslate="price-description-1-span-1" class="prise__inner-list">
+                           One location
+                        </li>
+                        <li isTranslate="price-description-1-span-2" class="prise__inner-list">
+                           120 photos in color
+                        </li>
+                        <li isTranslate="price-description-1-span-3" class="prise__inner-list">
+                           12 photos in retouch
+                        </li>
+                        <li isTranslate="price-description-1-span-4" class="prise__inner-list">
+                           Readiness 2-3 weeks
+                        </li>
+                        <li isTranslate="price-description-1-span-5" class="prise__inner-list">
+                           Make up, visage
+                        </li>
+                     </ul>
+                     <button isTranslate="order" class="golden-button order">
+                        Order shooting
+                     </button>
                   </div>
-                  <div class="prise">
-                     500 $
+                  <div class="section-price">
+                     <div isTranslate="title_standard" class="title-prise">
+                        Premium
+                     </div>
+                     <span class="prise">
+                        700 $
+                     </span>
+                     <ul class="prise-list">
+                        <li isTranslate="price-description-1-span-1" class="prise__inner-list">
+                           One or two locations
+                        </li>
+                        <li isTranslate="price-description-1-span-2" class="prise__inner-list">
+                           200 photos in color
+                        </li>
+                        <li isTranslate="price-description-1-span-3" class="prise__inner-list">
+                           20 photos in retouch
+                        </li>
+                        <li isTranslate="price-description-1-span-4" class="prise__inner-list">
+                           Readiness 1-2 weeks
+                        </li>
+                        <li isTranslate="price-description-1-span-5" class="prise__inner-list">
+                           Make up, visage
+                        </li>
+                     </ul>
+                     <button isTranslate="order" class="golden-button order">
+                        Order shooting
+                     </button>
                   </div>
-                  <ul class="prise-list">
-                     <li isTranslate="price-description-1-span-1" class="prise-inner-list">
-                        One location
-                     </li>
-                     <li isTranslate="price-description-1-span-2" class="prise-inner-list">
-                        120 photos in color
-                     </li>
-                     <li isTranslate="price-description-1-span-3" class="prise-inner-list">
-                        12 photos in retouch
-                     </li>
-                     <li isTranslate="price-description-1-span-4" class="prise-inner-list">
-                        Readiness 2-3 weeks
-                     </li>
-                     <li isTranslate="price-description-1-span-5" class="prise-inner-list">
-                        Make up, visage
-                     </li>
-                  </ul>
-                  <button isTranslate="order" class="golden-button order">
-                     Order shooting
-                  </button>
+                  <div class="section-price">
+                     <div isTranslate="title_standard" class="title-prise">
+                        Gold
+                     </div>
+                     <span class="prise">
+                        1000 $
+                     </span>
+                     <ul class="prise-list">
+                        <li isTranslate="price-description-1-span-1" class="prise__inner-list">
+                           Three locations or more
+                        </li>
+                        <li isTranslate="price-description-1-span-2" class="prise__inner-list">
+                           300 photos in color
+                        </li>
+                        <li isTranslate="price-description-1-span-3" class="prise__inner-list">
+                           50 photos in retouch
+                        </li>
+                        <li isTranslate="price-description-1-span-4" class="prise__inner-list">
+                           Readiness 1 weeks
+                        </li>
+                        <li isTranslate="price-description-1-span-5" class="prise__inner-list">
+                           Make up, visage, hairstyle
+                        </li>
+                     </ul>
+                     <button isTranslate="order" class="golden-button order">
+                        Order shooting
+                     </button>
+                  </div>
                </div>
+               
             </section>
 
             <section></section>
