feat:create footer later will give styles

--- a/index.html
+++ b/index.html
@@ -243,10 +243,28 @@
                         <div class="message">
                            <textarea isTranslate="message" class="message-inner" placeholder="Message"></textarea>
                         </div>
-                        <button isTranslate="send-message" class="golden-button send-button" isChangeColor>Send message</button>
+                        <button isTranslate="send-message" class="golden-button send-button" type="submit" isChangeColor>Send message</button>
                      </form>
                </div>
             </section>
+            <footer class="footer">               
+                  <div class="footer-container__git">
+                     <span isChangeColor>©</span>
+                     <span isChangeColor>2022</span>
+                     <span>
+                        <a  class="com" href="https://github.com/Dempfil" target="_blank" isChangeColor>github</a>
+                     </span>
+                  </div>
+                  <p> <a class="git-inner" href="https://rs.school/js-stage0/" target="_blank" isChangeColor>Rolling Scopes School</a></p>
+                  <div class="socials">
+                     <ul class="socials-list">
+                        <li class="socials-inner-list"><a href="#"><img class="socials-icon" src="./assets/Img/svg/social-list/inst.svg" alt="instagram"></a></li>
+                        <li class="socials-inner-list"><a href="#"><img class="socials-icon" src="./assets/Img/svg/social-list/fb.svg" alt="fasebook"></a></li>
+                        <li class="socials-inner-list"><a href="#"><img class="socials-icon" src="./assets/Img/svg/social-list/tw.svg" alt="twitter"></a></li>
+                        <li class="socials-inner-list"><a href="#"><img class="socials-icon" src="./assets/Img/svg/social-list/pinterest.svg" alt="pinterest"></a></li>
+                     </ul>
+                  </div>
+            </footer>
       </div>
 
 
