--- a/index.html
+++ b/index.html
@@ -13,101 +13,112 @@
    </head>
    <body>
       <div class="wrapper">
-            <section class="section top__section">
+            <section class="section top-section">
                <!-- Шапка -->
                <div class="header">
-                  <a href="#" class="logo">
+                  <a href="#" class="header__logo">
                         <img src="./assets/Img/svg/logo.svg" alt="logo">
                   </a>
-                  <nav class="menu" id="menu">
-                        <ul class="menu-list">
-                           <li class="menu-item">
-                              <a href="#skills" class="menu-link">
+                  <nav class="header__menu" id="menu">
+                        <ul class="header__menu-list">
+                           <li class="header__menu-item">
+                              <a href="#skills" class="header__menu-link">
                                  Skills
                               </a>
                            </li>
-                           <li class="menu-item">
-                              <a href="#portfolio" class="menu-link">
+                           <li class="header__menu-item">
+                              <a href="#portfolio" class="header__menu-link">
                                  Portfolio
                               </a>
                            </li>
-                           <li class="menu-item">
-                              <a href="#video" class="menu-link">
+                           <li class="header__menu-item">
+                              <a href="#video" class="header__menu-link">
                                  Video
                               </a>
                            </li>
-                           <li class="menu-item">
-                              <a href="#price" class="menu-link">
+                           <li class="header__menu-item">
+                              <a href="#price" class="header__menu-link">
                                  Price
                               </a>
                            </li>
-                           <li class="menu-item">
-                              <a href="#contacts" class="menu-link">
+                           <li class="header__menu-item">
+                              <a href="#contacts" class="header__menu-link">
                                  Contacts
                               </a>
                            </li>
                         </ul>
-                        <div class="switch-lng">
-                           <a id="en" class="switch-lng-link" href="#">en</a>
-                           <span>/</span>
-                           <a id="ru" class="switch-lng-link" href="#">ru</a>
+                        <div class="header__switch-lng">
+                           <a id="en" class="header__switch-lng-link" href="#">
+                              en
+                           </a>
+                           <span>
+                              /
+                           </span>
+                           <a id="ru" class="header__switch-lng-link" href="#">
+                              ru
+                           </a>
                         </div>
                   </nav>         
                </div>
                <!-- Тело топа -->
                <div class="top-content">
-                  <h1>Alexa Rise</h1>
-                  <p class="hero-text">
+                  <h1>
+                     Alexa Rise
+                  </h1>
+                  <p class="top-content__text">
                      Save sincere emotions, romantic feelings and happy moments of life together with professional photographer Alexa Rise
                   </p>
-                  <button class="golden-button">Hire me</button>
+                  <button class="btn" type="submit">
+                     Hire me
+                  </button>
                </div>
             </section>
-            <section class="section skills__section">
-               <div class="title__name">
-                  <h2>
-                     <span>
+            <section class="section">
+               <div class="title-name">
+                  <h2 class="title">
+                     <span class="title__content">
                         Skills
                      </span>
                   </h2>
                </div>
                <div class="skills">
-                  <div class="skills__discribe">
+                  <div class="skills__name">
                      <img src="./assets/Img/svg/skills/camera.svg" alt="camera">
-                     <div class="discribe__skills">
-                        <div class="title__text">Digital photography</div>
-                        <p class="describe__text">High-quality photos in the studio and on the nature</p>
+                     <div class="discribe-skills">
+                        <div class="discribe-skills__title-text">Digital photography</div>
+                        <p class="discribe-skills__text">High-quality photos in the studio and on the nature</p>
                      </div>
                   </div>
-                  <div class="skills__discribe">
+                  <div class="skills__name">
                      <img src="./assets/Img/svg/skills/video.svg" alt="video">
-                     <div class="discribe__skills">
-                        <div class="title__text">Video shooting</div>
-                        <p class="describe__text">Capture your moments so that they always stay with you</p>
+                     <div class="discribe-skills">
+                        <div class="discribe-skills__title-text">Video shooting</div>
+                        <p class="discribe-skills__text">Capture your moments so that they always stay with you</p>
                      </div>
                   </div>
-                  <div class="skills__discribe">
+                  <div class="skills__name">
                      <img src="./assets/Img/svg/skills/image.svg" alt="image">
-                     <div class="discribe__skills">
-                        <div class="title__text">Retouch</div>
-                        <p class="describe__text">I strive to make photography surpass reality</p>
+                     <div class="discribe-skills">
+                        <div class="discribe-skills__title-text">Retouch</div>
+                        <p class="discribe-skills__text">I strive to make photography surpass reality</p>
                      </div>
                   </div>
-                  <div class="skills__discribe">
+                  <div class="skills__name">
                      <img src="./assets/Img/svg/skills/mic.svg" alt="mic">
-                     <div class="discribe__skills">
-                        <div class="title__text">Audio</div>
-                        <p class="describe__text">Professional sounds recording for video, advertising, portfolio</p>
+                     <div class="discribe-skills">
+                        <div class="discribe-skills__title-text">Audio</div>
+                        <p class="discribe-skills__text">Professional sounds recording for video, advertising, portfolio</p>
                      </div>
                   </div>
-
                </div>
-               
-
             </section>
             <section class="section portfolio__section">
-               <div class="title__name">
-                  <h2><span>Portfolio</span></h2>
+               <div class="title-name">
+                  <h2 class="title">
+                     <span class="title__content">
+                        Portfolio
+                     </span>
+                  </h2>
                </div>
                <div class="buttons">
                   <button isTranslate="winter" class="just-button" data-season="winter">Winter</button>
@@ -126,9 +137,9 @@
 
             </section>
             <section class="section video__section">
-               <div class="title__name">
-                  <h2>
-                     <span>
+               <div class="title-name">
+                  <h2 class="title">
+                     <span class="title__content">
                         Video
                      </span>
                   </h2>
@@ -138,9 +149,9 @@
                </div>
             </section>
             <section class="section price__section">
-               <div class="title__name">
-                  <h2>
-                     <span>
+               <div class="title-name">
+                  <h2 class="title">
+                     <span class="title__content">
                         Price
                      </span>
                   </h2>
@@ -266,7 +277,5 @@
                   </div>
             </footer>
       </div>
-
-
    </body>
 </html>
