feat: correct names btn and stylies

--- a/index.html
+++ b/index.html
@@ -121,10 +121,10 @@
                   </h2>
                </div>
                <div class="buttons">
-                  <button isTranslate="winter" class="just-button" data-season="winter">Winter</button>
-                  <button isTranslate="spring" class="just-button" data-season="spring">Spring</button>
-                  <button isTranslate="summer" class="just-button" data-season="summer">Summer</button>
-                  <button isTranslate="autumn" class="just-button" data-season="autumn">Autumn</button>
+                  <button isTranslate="winter" class="btn btn--alternative" data-season="winter">Winter</button>
+                  <button isTranslate="spring" class="btn btn--alternative" data-season="spring">Spring</button>
+                  <button isTranslate="summer" class="btn btn--alternative" data-season="summer">Summer</button>
+                  <button isTranslate="autumn" class="btn btn--alternative" data-season="autumn">Autumn</button>
                </div>
                <div class="pictures">
                   <img class="portfolio-image" src="./assets/Img/png/Autumn/kiss.png" alt="portfolio-image">
