fix:name tags, buttons, delete noun tags

--- a/index.html
+++ b/index.html
@@ -14,8 +14,7 @@
    <body>
       <div class="wrapper">
             <section class="section top-section">
-               <!-- Шапка -->
-               <div class="header">
+               <header class="header">
                   <a href="#" class="header__logo">
                         <img src="./assets/Img/svg/logo.svg" alt="logo">
                   </a>
@@ -59,8 +58,7 @@
                            </a>
                         </div>
                   </nav>         
-               </div>
-               <!-- Тело топа -->
+               </header>
                <div class="top-content">
                   <h1>
                      Alexa Rise
@@ -73,7 +71,7 @@
                   </button>
                </div>
             </section>
-            <section class="section">
+            <section class="section" id="skills">
                <div class="title-name">
                   <h2 class="title">
                      <span class="title__content">
@@ -112,8 +110,8 @@
                   </div>
                </div>
             </section>
-            <section class="section portfolio__section">
-               <div class="title-name">
+            <section class="section">
+               <div class="title-name portfolio">
                   <h2 class="title">
                      <span class="title__content">
                         Portfolio
@@ -181,7 +179,7 @@
                            Make up, visage
                         </li>
                      </ul>
-                     <button isTranslate="order" class="golden-button order">
+                     <button isTranslate="order" class="btn">
                         Order shooting
                      </button>
                   </div>
@@ -209,7 +207,7 @@
                            Make up, visage
                         </li>
                      </ul>
-                     <button isTranslate="order" class="golden-button order">
+                     <button isTranslate="order" class="btn">
                         Order shooting
                      </button>
                   </div>
@@ -237,7 +235,7 @@
                            Make up, visage, hairstyle
                         </li>
                      </ul>
-                     <button isTranslate="order" class="golden-button order">
+                     <button isTranslate="order" class="btn">
                         Order shooting
                      </button>
                   </div>
@@ -254,27 +252,23 @@
                         <div class="message">
                            <textarea isTranslate="message" class="message-inner" placeholder="Message"></textarea>
                         </div>
-                        <button isTranslate="send-message" class="golden-button send-button" type="submit" isChangeColor>Send message</button>
+                        <button isTranslate="send-message" class="btn" type="submit" isChangeColor>Send message</button>
                      </form>
                </div>
             </section>
-            <footer class="footer">               
+            <footer class="section footer">               
                   <div class="footer-container__git">
                      <span isChangeColor>©</span>
                      <span isChangeColor>2022</span>
-                     <span>
-                        <a  class="com" href="https://github.com/Dempfil" target="_blank" isChangeColor>github</a>
-                     </span>
+                     <a  class="com" href="https://github.com/Dempfil" target="_blank" isChangeColor>github</a>
                   </div>
-                  <p> <a class="git-inner" href="https://rs.school/js-stage0/" target="_blank" isChangeColor>Rolling Scopes School</a></p>
-                  <div class="socials">
-                     <ul class="socials-list">
-                        <li class="socials-inner-list"><a href="#"><img class="socials-icon" src="./assets/Img/svg/social-list/inst.svg" alt="instagram"></a></li>
-                        <li class="socials-inner-list"><a href="#"><img class="socials-icon" src="./assets/Img/svg/social-list/fb.svg" alt="fasebook"></a></li>
-                        <li class="socials-inner-list"><a href="#"><img class="socials-icon" src="./assets/Img/svg/social-list/tw.svg" alt="twitter"></a></li>
-                        <li class="socials-inner-list"><a href="#"><img class="socials-icon" src="./assets/Img/svg/social-list/pinterest.svg" alt="pinterest"></a></li>
-                     </ul>
-                  </div>
+                  <a class="git-inner" href="https://rs.school/js-stage0/" target="_blank" isChangeColor>Rolling Scopes School</a>
+                  <ul class="socials-list">
+                     <li class="socials-inner-list"><a href="#"><img class="socials-icon" src="./assets/Img/svg/social-list/inst.svg" alt="instagram"></a></li>
+                     <li class="socials-inner-list"><a href="#"><img class="socials-icon" src="./assets/Img/svg/social-list/fb.svg" alt="fasebook"></a></li>
+                     <li class="socials-inner-list"><a href="#"><img class="socials-icon" src="./assets/Img/svg/social-list/tw.svg" alt="twitter"></a></li>
+                     <li class="socials-inner-list"><a href="#"><img class="socials-icon" src="./assets/Img/svg/social-list/pinterest.svg" alt="pinterest"></a></li>
+                  </ul>
             </footer>
       </div>
    </body>
